# google-calendar-notifications

./: README.md  pyproject.toml
google_calendar_notifications/: __init__.py  helpers.py  main.py  models.py  quickstart.py  settings.py
tests/: test_google_calendar_notifications.py
